--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
    Public API Request
 ======================================== */
 
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200&display=swap');
 
 * {
 	box-sizing: border-box;
@@ -14,52 +14,45 @@ html, body {
 }
 
 body {
-    font-family: "Nunito", sans-serif;
+    font-family: "Montserrat", sans-serif;
     text-align: center;
-    background: rgba(235, 235, 235, 0.9);
+    background: #F8F9FA;
 }
 
 header {
     padding: 15px 5px 5px;
+    background: #fff;
 }
 
 .header-inner-container {
     max-width: 1180px;
-    margin: auto;
+    margin: 2em auto 1em auto;
 }
 
 header h1 {
-    font-size: 1.25em;
+    font-size: 1.8em;
     color: rgba(50, 50, 50, 0.9);
-    margin-top: 35px;
+    margin-top: 25px;
 }
 
 .search-input {
     padding: 0.4rem 1rem;
-    border: 1px solid rgba(200, 200, 200, 0.9);
-    border-radius: 0.25rem 0 0 0.25rem ;
-    max-width: 20rem;
+    border: 1px solid #D0DBE0;
+    border-radius: 40px;
+    width: 25em;
+    height: 2.5em;
     transition: .4s ease-out;
+    text-indent: 24px;
     outline: none;
+    position: relative;
 }
 
-.search-input:active, .search-input:hover, .search-input:focus {
-    border: 1px solid rgba(50, 50, 50, 0.9);
-}
-
-.search-submit {
-    cursor: pointer;
-    height: 33px;
-    background: rgba(245, 245, 245, 0.9);
-    border-radius: 0 0.25rem 0.25rem 0;
-    border: 1px solid rgba(200, 200, 200, 0.9);
-    transition: .4s ease-out;
-    outline: none;
-}
-
-.search-submit:active, .search-submit:hover, .search-submit:focus {
-    background: rgba(255, 255, 255, 0.9);
-    border: 1px solid rgba(50, 50, 50, 0.9);
+.search-icon {
+    width: 16px;
+    height: 16px;
+    margin: 13px 0px 12px 15px;
+    position: absolute;
+    z-index: 1;
 }
 
 
@@ -75,6 +68,7 @@ header h1 {
     width: 100%;
     max-width: 1200px;
     margin: auto;
+    padding-top: 2.5em;
 }
   
 .card {
@@ -85,17 +79,17 @@ header h1 {
     cursor: pointer;
     width: 100%;
     max-width: 360px;
-    margin: 10px 10px 20px;
-    padding: 10px;
-    background: rgba(245, 245, 245, 0.9);
-    border-radius: 0.25em;
-    border: 1px solid rgba(50, 50, 50, 0.3);
+    margin: 20px 20px;
+    padding: 20px;
+    background: #fff;
+    border-radius: 1em;
+    box-shadow: 0px 0px 20px 5px #ccc;
     transition: .4s ease-out;
     overflow: hidden;
 }
 
 .card-img {
-    width: 95px;
+    width: 80px;
     margin: 10px 15px auto 10px;
     border-radius: 50%;
 }
@@ -110,7 +104,7 @@ header h1 {
 
 .card-text {
     font-size: 0.9em;
-    color: rgba(50, 50, 50, 0.7);
+    color: #000;
     margin: 7px auto;
     transition: .4s ease-out;
 }
@@ -131,6 +125,7 @@ header h1 {
     bottom: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.7);
+    z-index: 2;
 }
 
 .modal {
@@ -151,10 +146,11 @@ header h1 {
     top: 15px;
     right: 15px;
     cursor: pointer;
-    color: rgba(255, 255, 255, 0.9);
-    background: rgba(0, 0, 0, 0.8);
+    color: #000;
+    background: #fff;
     outline: none;
-    border-radius: 0.25em;
+    border-radius: 50%;
+    padding: 10px;
     border: 1px solid rgba(50, 50, 50, 0.3);
 }
 
@@ -189,10 +185,7 @@ header h1 {
     padding: 10px 15px 15px;;
     margin: 10px auto auto;
     background: rgba(255, 255, 255, 1);
-    border-radius: 0.25em;
-    border: 1px solid rgba(100, 100, 100, 0.3);
 }
-
 
 .modal-btn-container .btn {
     display: inline-block;
@@ -244,20 +237,3 @@ header h1 {
    Desktop
    Hover styles on desktop 
 ======================================== */
-
-@media (min-width: 1024px) {
-
-    .card:hover {
-        background: rgba(255, 255, 255, 1);
-        border: 1px solid rgba(50, 50, 50, 0.9);
-    }
-
-    .card:hover .card-text {
-        color: rgba(25, 25, 25, 1); 
-    }
-
-    .btn:hover {
-        background: rgba(255, 255, 255, 1);
-        color: rgba(25, 25, 25, 1); 
-    }
-}
